little css update: Box Shadow

--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
     <title>Pokedex</title>
 </head>
 <body onload="loadPokemon()">
-    <div id="pokemons">
-        
-    </div>
+    <div id="pokemons"><!-- render Pokemons Here --></div>
     <script src="./script.js"></script>
 </body>
 </html>
